[package]
name = "chrrrrrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.6"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
reqwest = { version = "0.11.26", features = ["json"] }
async-trait = "0.1.78"
serde_json = "1.0.114"
dns-lookup = "2.0.4"


[dev-dependencies]
httpmock = "0.7.0-rc.1"
mockall = "0.12.1"